--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "tap-lochnest": "1.x.x",
     "faucet": "*",
     "tap-spec": "*",
-
     "karma-webpack": "bySabi/karma-webpack",
     "babel-loader": "6.x.x",
-    "webpack": "^2.1.0-beta"
+    "webpack": "^2.1.0-beta",
+    "cross-env": "2.x.x"
   },
   "devDependencies": {
     "eslint": "3.x.x",
