--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "karma-jsdom-launcher": "3.x.x",
     "karma-tap": "2.x.x",
     "karma-tap-pretty-reporter": "1.x.x",
+    "karma-sourcemap-loader": "*",
     "karma-webpack": "1.x.x",
     "tape": "4.x.x",
     "tap-lochnest": "1.x.x",
     "faucet": "*",
     "tap-spec": "*",
     "babel-loader": "6.x.x",
+    "json-loader": "*",
     "webpack": "^2.1.0-beta",
     "cross-env": "2.x.x"
   },
