--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "peerDependencies": {
     "karma": "1.x.x",
     "babel-core": "6.x.x",
-    "webpack": "^1.1.0 || ^2 || ^2.1.0-beta",
+    "webpack": "^1.1.0 || ^2 || ^2.1.0-beta"
   },
   "dependencies": {
     "babel-loader": "6.x.x",
