add coverage settings

--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "karma-tap": "3.x.x",
     "karma-tap-pretty-reporter": "1.x.x",
     "karma-sourcemap-loader": "*",
+    "karma-coverage": "1.x.x",
     "karma-webpack": "1.x.x",
+    "istanbul-instrumenter-loader": "1.x.x",
     "tape": "4.x.x",
     "faucet": "*",
     "tap-spec": "*",
